<resources>
    <string name="app_name">Стоимость бензина</string>
    <string name="radio92">92       50 руб.</string>
    <string name="radio95">95       55 руб.</string>
    <string name="radio98">98       57 руб.</string>
    <string name="liters">Введите количество</string>
    <string name="liters_price">Количество литров: </string>
    <string name="mark">Выберите марку бензина: </string>
    <string name="ok_button">Рассчитать!</string>
    <string name="back_button">Назад</string>
</resources>