<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="98dp"
        android:gravity="center_horizontal"
        android:paddingTop="24dp"
        android:paddingBottom="24dp">
        <TextView
            android:id="@+id/liters_textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/liters_price"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/liters_input"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:inputType="numberDecimal"
            android:hint="@string/liters"
            android:autofillHints="" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="98dp"
        android:gravity="center_horizontal"
        android:paddingTop="24dp"
        android:paddingBottom="24dp">
        <TextView
            android:id="@+id/mark_textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/mark"
            android:textSize="20sp"/>
    </LinearLayout>
    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="24dp"
        android:paddingBottom="24dp">
        <RadioButton
            android:id="@+id/radio92"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio92"
            android:textSize="20sp"/>
        <RadioButton
            android:id="@+id/radio95"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio95"
            android:textSize="20sp"/>
        <RadioButton
            android:id="@+id/radio98"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio98"
            android:textSize="20sp"/>
    </RadioGroup>
    <Button
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok_button"/>
</LinearLayout>